--- a/karma-common/pom.xml
+++ b/karma-common/pom.xml
@@ -171,7 +171,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>edu.isi.karma.modeling.alignment.CLITopKSteinerTree</mainClass>
+                            <mainClass>edu.isi.karma.modeling.cli.SemanticModeling</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
