--- a/karma-common/src/main/config/log4j.properties
+++ b/karma-common/src/main/config/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=WARN, S, F
+log4j.rootLogger=DEBUG, S, F
 
 #### CONSOLE ####
 log4j.appender.S=org.apache.log4j.ConsoleAppender
@@ -28,6 +28,7 @@ log4j.appender.CLEANING_LOGGER.layout=org.apache.log4j.TTCCLayout
 
 log4j.logger.edu.isi.karma.controller.command.alignment=INFO
 log4j.logger.edu.isi.karma.modeling.alignment=INFO
+log4j.logger.edu.isi.karma.modeling.alignment.learner.ModelLearner=DEBUG
 log4j.logger.edu.isi.karma.modeling.semantictypes=INFO
 log4j.logger.edu.isi.karma.kr2rml.mapping.WorksheetR2RMLJenaModelParser=INFO
 log4j.logger.edu.isi.karma.spark=INFO
