--- a/karma-common/pom.xml
+++ b/karma-common/pom.xml
@@ -71,6 +71,12 @@
 		<artifactId>json-lib</artifactId>
 		<classifier>jdk15</classifier>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/au.com.bytecode/opencsv -->
+	<dependency>
+		<groupId>au.com.bytecode</groupId>
+		<artifactId>opencsv</artifactId>
+		<version>2.4</version>
+	</dependency>
 
 	<dependency>
 		<groupId>${jena.group}</groupId>
