--- a/karma-mr/pom.xml
+++ b/karma-mr/pom.xml
@@ -17,10 +17,10 @@
         
 	<repositories>
 		<repository>
-		    <id>colo-vm41</id>
-		    <name>colo-vm41</name>
-		    <url>http://colo-vm41.isi.edu:8081/artifactory/simple/libs-release-local/</url>
-		</repository>
+		    <id>KarmaRepo</id>
+		    <name>Karma Repo</name>
+		    <url>http://repo.karma.isi.edu/artifactory/libs-release-local</url>
+	  	</repository>
 		<repository>
       		<id>cloudera</id>
       		<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
