--- a/karma-research/pom.xml
+++ b/karma-research/pom.xml
@@ -100,5 +100,21 @@
 		
 	</dependencies>
 
-    
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>edu.isi.karma.research.modeling.ModelLearner_KnownModels</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
