--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 	  <repository>
 		  <id>central</id>
 		  <name>Central Maven Repository</name>
-		  <url>http://repo1.maven.org/maven2/</url>
+		  <url>https://repo1.maven.org/maven2/</url>
 	  </repository>
 
 	  <repository>
@@ -105,12 +105,14 @@
 	  </repository>
       <repository>
         <id>maven2.maven.org</id>
-        <url>http://repo1.maven.org/maven2/</url>
+        <url>https://repo1.maven.org/maven2/</url>
       </repository>
       <repository>
             <id>osgeo</id>
-            <name>Open Source Geospatial Foundation Repository</name>
-            <url>http://download.osgeo.org/webdav/geotools/</url>
+            <!--<name>Open Source Geospatial Foundation Repository</name>
+            <url>https://download.osgeo.org/webdav/geotools/</url>-->
+            <name>OSGeo Release Repository</name>
+            <url>https://repo.osgeo.org/repository/release/</url>
       </repository>
       <repository>
             <id>KarmaRepo</id>
